--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "3d_portfolio",
+  "homepage": "https://Marfousidev.github.io/myporfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
